swagger tags on resources and controller
